--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ a:hover {
 /*nav*/
 
 nav {
+       position: fixed;
     display: flex;
     width: 100%;
     border-bottom: 1px solid var(--border-color);
