--- a/style.css
+++ b/style.css
@@ -161,11 +161,11 @@ a:hover {
     color: var(--hover-color);
 }
 
-/*nav*/
+/*\*/
 
 nav {
-    animation: slide-in-top 2s;
-    animation-delay: 5s;
+/*     animation: slide-in-top 2s;
+    animation-delay: 5s; */
     display: flex;
     width: 100%;
     border-bottom: 1px solid var(--border-color);
@@ -243,8 +243,6 @@ nav .nav-section {
     gap: 6rem;
 }
 
-
-
 /*home*/
 
 .home {
@@ -263,8 +261,8 @@ nav .nav-section {
     display: flex;
     align-items: center;
     margin-top: 100px;
-    animation: slide-top 2s;
-    animation-delay: 5s;
+/*     animation: slide-top 2s;
+    animation-delay: 5s; */
 }
 
 .home-container .info h1 {
@@ -1012,6 +1010,15 @@ h1>.magic>.magic-text {
 }
 
 @media(max-width: 1100px) {
+    #nav-mobile-section
+    {
+                background-color: var(--body-bg-color);
+        flex-direction: column;
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
+        transform: translateY(-100%);
+    }
     body .cursor {
             display: none;
         }
