--- a/style.css
+++ b/style.css
@@ -164,10 +164,9 @@ a:hover {
 /*\*/
 
 nav {
-    top: 0;
 /*     animation: slide-in-top 2s;
     animation-delay: 5s; */
-    position: fixed;
+    position: sticky;
     display: flex;
     width: 100%;
     border-bottom: 1px solid var(--border-color);
@@ -175,8 +174,7 @@ nav {
 }
 
 nav .nav-section {
-    top: 0;
-    position: fixed;
+    position: sticky;
     padding: 1rem 3.5rem;
     display: flex;
     gap: 1rem;
@@ -186,8 +184,7 @@ nav .nav-section {
 }
 
 #nav-mobile-section {
-    position: fixed;
-    top:0;
+    position: sticky;
     display: flex;
     flex-basis: calc(100% * (2 / 3));
     z-index: 2;
